Fixed spacing issue with trigger buttons

--- a/src/web/assets/cp/src/css/_preview.scss
+++ b/src/web/assets/cp/src/css/_preview.scss
@@ -84,6 +84,7 @@
 
     .btngroup {
       margin-bottom: 0;
+      margin-right: 24px;
     }
 
     & + .lp-iframe-container {
